unpackaged/main/default/objects/Indirect_Product__c/Indirect_Product__c.object-meta.xml
<CustomObject>
    <label>Partner</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>