unpackaged/main/default/objects/Indirect_Product__c/fields/Acquiring_Margin__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Margin__c</fullName>
    <label>Acquiring Margin</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>