unpackaged/main/default/objects/Indirect_Product__c/fields/ATV__c.field-meta.xml
<CustomField>
    <fullName>ATV__c</fullName>
    <label>ATV</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>