unpackaged/main/default/objects/Indirect_Product__c/fields/Development_Costs_Capex__c.field-meta.xml
<CustomField>
    <fullName>Development_Costs_Capex__c</fullName>
    <label>Development Costs/Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>