unpackaged/main/default/objects/Indirect_Product__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <label>GP %</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>