unpackaged/main/default/objects/Indirect_Product__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>If the Gross Profit is none, please enter 0.</inlineHelpText>
    <label>Gross Profit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>