unpackaged/main/default/objects/Indirect_Product__c/fields/In_Year__c.field-meta.xml
<CustomField>
    <fullName>In_Year__c</fullName>
    <label>In Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>