unpackaged/main/default/objects/Indirect_Product__c/fields/Opportunity_Volumes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Volumes__c</fullName>
    <label>Opportunity Volumes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>