unpackaged/main/default/objects/Indirect_Product__c/fields/Opt_In_Rate__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Rate__c</fullName>
    <label>Opt-In Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>