unpackaged/main/default/objects/Indirect_Product__c/fields/Processing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Processing_Costs__c</fullName>
    <label>Processing Costs</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>