unpackaged/main/default/objects/Indirect_Product__c/fields/Processing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Processing_Rate__c</fullName>
    <label>Processing Rate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>