unpackaged/main/default/objects/Indirect_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquiring</fullName>
            </value>
            <value>
                <fullName>DCC-ATM</fullName>
            </value>
            <value>
                <fullName>DCC-POS</fullName>
            </value>
            <value>
                <fullName>DCC-ECOMM</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>MCP-ECOMM</fullName>
            </value>
            <value>
                <fullName>Visa Merchant Services</fullName>
            </value>
            <value>
                <fullName>Multi-Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>