unpackaged/main/default/objects/Indirect_Product__c/fields/Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share__c</fullName>
    <label>Revenue Share</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>