unpackaged/main/default/objects/Indirect_Product__c/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <label>Transactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>