unpackaged/main/default/objects/Indirect_Product__c/fields/Volumes__c.field-meta.xml
<CustomField>
    <fullName>Volumes__c</fullName>
    <label>Volumes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>